--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "develop": "budo src --css node_modules/react-jsonld-editor/src/style.css --live -- -t [ babelify --sourceMaps inline ]",
     "prestandalone": "npm -s run build && mkdir -p standalone",
     "standalone": "browserify lib | uglifyjs -c > standalone/bundle.js",
-    "poststandalone": "cp src/index.html node_modules/react-jsonld-editor/src/style.css standalone && zip -r standalone.zip standalone"
+    "poststandalone": "cp src/index.html node_modules/react-jsonld-editor/src/style.css standalone && cd standalone && zip ../standalone.zip *"
   },
   "author": "Ryan Shaw",
   "license": "ISC",
