--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "description": "Demo of editing JSON-LD with LOV vocabs",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "lint": "eslint --ext .jsx src",
     "transpile": "babel src -d lib --source-maps inline",
