--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
-  "presets": ["es2015", "react"],
-  "plugins": ["transform-runtime", "transform-object-rest-spread", "transform-strict-mode"]
+  "presets": ["es2015"],
+  "plugins": ["transform-runtime", "transform-strict-mode"]
 }
