--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "description": "Demo of editing JSON-LD with LOV vocabs",
-  "main": "src/index.js",
+  "main": "lib/index.js",
+  "files": "lib",
   "scripts": {
-    "lint": "eslint --ext .jsx src",
+    "lint": "eslint src",
     "transpile": "babel src -d lib --source-maps inline",
     "prebuild": "npm -s run lint",
     "build": "npm -s run transpile",
@@ -18,11 +19,9 @@
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.1.2",
-    "babel-plugin-transform-object-rest-spread": "^6.6.5",
     "babel-plugin-transform-runtime": "^6.1.2",
     "babel-plugin-transform-strict-mode": "^6.8.0",
     "babel-preset-es2015": "^6.1.2",
-    "babel-preset-react": "^6.1.2",
     "babelify": "^7.2.0",
     "budo": "^8.0.4",
     "eslint": "^2.12.0",
@@ -35,6 +34,7 @@
     "rdf-ns": "0.0.2",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
+    "react-hyperscript": "^2.4.0",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0"
