--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "transpile": "babel src -d lib --source-maps inline",
     "prebuild": "npm -s run lint",
     "build": "npm -s run transpile",
-    "develop": "budo src --css node_modules/react-jsonld-editor/src/style.css --live -- -t [ babelify --sourceMaps inline ]",
+    "develop": "budo src/standalone.js --css node_modules/react-jsonld-editor/src/style.css --live -- -t [ babelify --sourceMaps inline ]",
     "prestandalone": "npm -s run build && mkdir -p standalone",
-    "standalone": "browserify lib | uglifyjs -c > standalone/bundle.js",
+    "standalone": "browserify lib/standalone.js | uglifyjs -c > standalone/bundle.js",
     "poststandalone": "cp src/index.html node_modules/react-jsonld-editor/src/style.css standalone && cd standalone && zip ../standalone.zip *"
   },
   "author": "Ryan Shaw",
