--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "uglify": "^0.1.5"
   },
   "dependencies": {
+    "file-saver": "^1.3.3",
     "highland": "^2.8.1",
     "highlight.js": "^9.7.0",
     "immutable": "^3.8.1",
